--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
 <!--
+	Adapted by Naisha Agarwal
 	Spectral by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+	Adapted by Naisha Agarwal
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Naisha Agarwl</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">Naisha Agarwal</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -41,13 +43,13 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
-							<ul class="actions special">
+							<h2>Naisha Agarwal</h2>
+							<p>Computer Scientist.<br />
+							Researcher.<br />
+							Student at UCLA.</p>
+							<!-- <ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
 					</section>
@@ -56,10 +58,14 @@
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>About Me<br />
+								</h2>
+								<p>Hey! I'm Naisha, a second-year computer science major at UCLA.</p>
+								<p> I am broadly interested in machine learning, and specifically its applications to
+								fairness and ethics. <br /> At UCLA, I am involved with the ScaI lab, as well as being an ACM AI officer
+								and the ACM Impact director. </p>
+								<p> Besides computer science, I am an avid singer and am part of the
+								UCLA club tennis team. </p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
