imported font awesome; linkedin logo not appearing

--- a/index.html
+++ b/index.html
@@ -67,11 +67,48 @@
 								<p> Besides computer science, I am an avid singer and am part of the
 								UCLA club tennis team. </p>
 							</header>
-							<ul class="icons major">
+							<!-- <ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
 								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
+							</ul> -->
+							<ul class="icons major">
+								<!-- <li>
+								  <a href="https://www.github.com/Divide-By-0" target="_blank">
+									<span class="icon fa-github major style4">
+									  <span class="label">Github</span>
+									</span>
+								  </a>
+								</li>
+								<li>
+								  <a href="https://blog.aayushg.com" target="_blank">
+									<span class="icon fa-pen-nib major style4">
+									  <span class="label">Blog</span>
+									</span>
+								  </a>
+								</li> -->
+								<li>
+								  <a href="/assets/images/resume.pdf" target="_blank">
+									<span class="icon fa-file-text major style4">
+									  <span class="label">Resume</span>
+									</span>
+								  </a>
+								</li>
+								<li>
+								  <a href="mailto:naisha1025@gmail.com" target="_blank">
+									<span class="icon fa-envelope major style4">
+									  <span class="label">Email</span>
+									</span>
+								  </a>
+								</li>
+								<li>
+								  <a href="https://www.linkedin.com/in/naisha-agarwal/" target="_blank">
+									<span class="icon fa-linkedin-in major style4">
+									  <span class="label">LinkedIn</span>
+									</span>
+								  </a>
+								</li>
+							  </ul>
 						</div>
 					</section>
 
