--- a/index.html
+++ b/index.html
@@ -152,23 +152,27 @@
 					<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+							<div class="image"><img src="images/hero-bg.jpg" alt="" /></div><div class="content">
 								<h2>2023 ACM SIGKDD Conference </h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<p>Presented my work on fairness in recommendation systems at the 2023 KDD conference in Long Beach, California. Was an amazing experience, talking to leading companies and seeing the relevance of my research in a corporate landscape.</p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/ycomb.jpg" alt="" /></div><div class="content">
+								<h2>Y Combinator Conference</h2>
+								<p>Was one of 400 people chosen from over 2000 appplicans for the 2023 Y Combinator Summer Conference. Listened to inspiring talks from leading entrepreneurs, and gained further insight on entrepreneurship, business, and how to start a company. </p>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/treehacks.jpg" alt="" /></div><div class="content">
+								<h2> Tree Hacks 2023 </h2>
+								<p>Attended my first hackathon at Stanford! Worked with team members to build ChatTeach, a learning platform for kids. </p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/sfs.png" alt="" /></div><div class="content">
+								<h2> Singing for Smiles </h2>
+								<p> Started my nonprofit, Singing for Smiles, during the pandemic to spread joy through the power of song. Performed for 60+ senior homes, and have 40+ singers on board. Collaborated with 4-time Emmy nominee Con Fullam, and was recognized by various news outlets. </p>
 							</div>
 						</section>
 					</section>
@@ -198,7 +202,7 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Naisha Agarwal </li><li></li>
 						</ul>
 					</footer>
 
