--- a/index.html
+++ b/index.html
@@ -29,10 +29,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="index.html#one">About Me</a></li>
+											<li><a href="index.html#two">Spotlights</a></li>
+											<li><a href="index.html#cta">Contact Me</a></li>
 										</ul>
 									</div>
 								</li>
@@ -73,22 +72,8 @@
 								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul> -->
 							<ul class="icons major">
-								<!-- <li>
-								  <a href="https://www.github.com/Divide-By-0" target="_blank">
-									<span class="icon fa-github major style4">
-									  <span class="label">Github</span>
-									</span>
-								  </a>
-								</li>
 								<li>
-								  <a href="https://blog.aayushg.com" target="_blank">
-									<span class="icon fa-pen-nib major style4">
-									  <span class="label">Blog</span>
-									</span>
-								  </a>
-								</li> -->
-								<li>
-								  <a href="/assets/images/resume.pdf" target="_blank">
+								  <a href="https://docs.google.com/document/d/1WJETPmHURgkKLnmrCdyXM6rV2RX0mp72ZOA07bznXhY/edit?usp=sharing" target="_blank">
 									<span class="icon fa-file-text major style4">
 									  <span class="label">Resume</span>
 									</span>
@@ -103,7 +88,7 @@
 								</li>
 								<li>
 								  <a href="https://www.linkedin.com/in/naisha-agarwal/" target="_blank">
-									<span class="icon fa-linkedin-in major style4">
+									<span class="icon brands fa-linkedin-in major style4">
 									  <span class="label">LinkedIn</span>
 									</span>
 								  </a>
@@ -160,7 +145,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/ycomb.jpg" alt="" /></div><div class="content">
 								<h2>Y Combinator Conference</h2>
-								<p>Was one of 400 people chosen from over 2000 appplicans for the 2023 Y Combinator Summer Conference. Listened to inspiring talks from leading entrepreneurs, and gained further insight on entrepreneurship, business, and how to start a company. </p>
+								<p>Was one of 400 people chosen from over 2000 appplicants for the 2023 Y Combinator Summer Conference. Listened to inspiring talks from leading entrepreneurs, and gained further insight on entrepreneurship, business, and how to start a company. </p>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -182,12 +167,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Contact Me</h2>
+								<p>Always down to talk about new ideas! </p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="mailto:naisha1025@gmail.com" class="button fit primary">Email</a></li>
+								<li><a href="https://www.linkedin.com/in/naisha-agarwal/" class="button fit">LinkedIn</a></li>
 							</ul>
 						</div>
 					</section>
@@ -195,11 +180,9 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/naisha-agarwal/" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							<li><a href="https://www.instagram.com/naishas.notes/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+							<li><a href="mailto:naisha1025@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>&copy; Naisha Agarwal </li><li></li>
