fixed some typos

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 							<h2>Naisha Agarwal</h2>
 							<p>Computer Scientist.<br />
 							Researcher.<br />
+							Singer. <br />
 							Student at UCLA.</p>
 							<!-- <ul class="actions special">
 								<li><a href="#" class="button primary">Activate</a></li>
@@ -139,7 +140,7 @@
 						<section class="spotlight">
 							<div class="image"><img src="images/hero-bg.jpg" alt="" /></div><div class="content">
 								<h2>2023 ACM SIGKDD Conference </h2>
-								<p>Presented my work on fairness in recommendation systems at the 2023 KDD conference in Long Beach, California. Was an amazing experience, talking to leading companies and seeing the relevance of my research in a corporate landscape.</p>
+								<p>Presented my work on fairness in recommendation systems at the 2023 KDD conference in Long Beach, California. Was an amazing experience talking to leading companies and seeing the relevance of my research in a corporate landscape.</p>
 							</div>
 						</section>
 						<section class="spotlight">
